fix draging on mobile, update to unified pointer events

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -612,6 +612,10 @@ video {
   flex: none;
 }
 
+.touch-none {
+  touch-action: none;
+}
+
 .flex-col {
   flex-direction: column;
 }
